Cleaned up error messages

--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -37,7 +37,9 @@ en:
     group_discount: Percent fewer terms if working in a group
     group_source: Source of project groups
     no_group: No group options set.
-    tz_warn: This game occurs in the %{time_zone} time zone and all dates reflect this.
+    tz_warn: >
+      This game occurs in the %{time_zone} time zone and all dates
+      reflect this.
     response_summary: Student Response Summary
     resp_challenged: Challenged responses
     resp_con_expct: Concepts expected
@@ -46,3 +48,19 @@ en:
     resp_perf: Performance
     game_summary: This class identified %{con_count} unique concepts.
     not_reviewed: This has not yet been reviewed.
+    reviewed_err: >
+      You must review all candidates to mark the review
+      'completed'
+    group_requires_discount: >
+      The group option requires that a discount be
+      entered.
+    group_requires_project: >
+      The group option requires that a project be
+      selected
+    start_date_err: >
+      The bingo game cannot begin after the course has started
+      (%{start_date} > %{course_start_date})
+    end_date_err: >
+      The bingo game cannot begin after the course has ended
+      (%{end_date} > %{course_end_date})
+
