testing school admin functions

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -153,6 +153,7 @@ en:
   terms_review: Terms Review
   course: Course
   school: School
+  schools_edit: Edit schools
   active: Active
   inactive: Inactive
   details: Details
