gots to warn of user drops

--- a/config/locales/courses.en.yml
+++ b/config/locales/courses.en.yml
@@ -46,3 +46,5 @@ en:
     re_invite: Re-Invite
     drop: Drop
     courses: Courses
+    drop_student_confirm: >
+      Are you sure you want to drop this student from the class?
