--- a/config/locales/experiences.en.yml
+++ b/config/locales/experiences.en.yml
@@ -1,6 +1,8 @@
 en:
   experiences:
     simulation: Collaboration experience simulation
+    available: 'Simulation: %{task}'
+    completed: 'Completed Sim: %{task]'
     instructions_lbl: Instructions
     glossary_lbl: Glossary
     scenario_lbl: Scenario
