Reactified concepts admin and updating demo with candidate review

--- a/config/locales/candidates.en.yml
+++ b/config/locales/candidates.en.yml
@@ -27,6 +27,12 @@ en:
     demo_def5: The methods and techniques a group follows
     demo_term6: Team
     demo_def6: A bunch of people working together
+    demo_review_topic: Simulations and Gaming
+    demo_review_description: >
+      Lara, M., Myers, R., Frick, T. W., Aslan, S., & Michaelidou, T.
+      (2010). A Design Case : Creating an Enhanced Version of the
+      Diffusion Simulation Game. International Journal of Designs for
+      Learning, 1(1), 301–310.
     demo_bingo_topic: Gamification and Education
     demo_bingo_description: >
       Dichev, C., & Dicheva, D. (2017). Gamifying education: what is
