--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -34,7 +34,7 @@ en:
     days_for_prep: Days for instructor prep
     attached_to: Attached to %{course_name} course.
     group_option: Group submissions allowed?
-    group_discount: Percent fewer terms if working in a group
+    group_discount: Discount for collaboration
     group_source: Source of project groups
     no_group: No group options set.
     tz_warn: >
