--- a/config/locales/experiences.en.yml
+++ b/config/locales/experiences.en.yml
@@ -13,6 +13,7 @@ en:
     reaction_suggestions: Reaction Suggestions
     start_date_lbl: Experience start date
     end_date_lbl: Experience end date
+    lead_time_lbl: Days for instructor prep
     close_pnl: Close panel
     create_success: Experience was successfully created.
     update_success: Experience was successfully updated.
