tests fly for reworked candidate lists

--- a/config/locales/bingo_games.en.yml
+++ b/config/locales/bingo_games.en.yml
@@ -37,6 +37,7 @@ en:
     feedback: Feedback
     concept: Concept
     date: Game date
+    your_score: Your performance
     bingo_games: Bingo! Games
     no_games: No Bingo! games
     group_opts: Group options
