--- a/config/locales/candidates.en.yml
+++ b/config/locales/candidates.en.yml
@@ -50,6 +50,8 @@ en:
     update_success: Your list was successfully saved.
     not_ready_for_review: This list is not yet ready for review.
     no_longer_available: This list is no longer available for editing.
+    list_closed: >
+      This list has already closed and can no longer be edited.
     concepts_for_game: All identified viable concepts
     ind_sum_msg: You identified the following terms, resulting in %{con_count} unique concepts
     term: Term
@@ -63,10 +65,12 @@ en:
     edit:
       title: Complete the term list
       instructions: >
-        Please read up on the topic above, being sure to go through the assigned readings, as
-        well as to find your own materials. Make a list of what you believe to be the most
-        important and/or salient terms and enter them, along with definitions, below. Be sure to
-        provide the definitions in your own words.
+        Please read up on the topic above, being sure to go through the
+        assigned readings, as well as to find your own materials. Make a
+        list of what you believe to be the most important and/or salient
+        terms and enter them, along with explanations of their meaning
+        and importance to serve as clues to help others identify the
+        terms you're describing.
       behalf: on behalf of 
       waiting: Still awaiting a response to your group help request
       req_rec: Your teammates in %{grp_name} want to collaborate
