upgraded more libs

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -160,6 +160,7 @@ en:
   course: Course
   school: School
   schools_edit: Schools
+  consent_forms_edit: Consent Forms
   courses_edit: Courses
   reporting: Reporting Center
   experiences_edit: Experiences
