Working on consent logs

--- a/config/locales/consent_logs.en.yml
+++ b/config/locales/consent_logs.en.yml
@@ -15,3 +15,4 @@ en:
         change your response.
       submit_response: Record my response to this Consent Form
       consent_dl: Download a Copy of this Document
+      accept: I agree
