--- a/config/locales/experiences.en.yml
+++ b/config/locales/experiences.en.yml
@@ -71,7 +71,7 @@ en:
     new:
       title: New Experience
     next:
-      journal: 'Journal entry: Week %{week_num}'
+      journal: 'Journal entry: Week {{week_num}}'
       prompt: Which behavior best characterizes this group now?
       other: What behavior did you see?
       comments: Your comments
@@ -92,6 +92,7 @@ en:
       scenario_lbl: The student project scenario
       behaviors_lbl: The behaviors
       behaviors_lbl_sub: These labels and descriptions are provided on each page which follows
+      next: Next
       reminder: >
         You may access these instructions or the project description
         at any time using the <i>Instructions</i> button in the upper right-hand
