--- a/config/locales/candidates.es.yml
+++ b/config/locales/candidates.es.yml
@@ -1,85 +1,85 @@
-en:
+es:
   candidate_lists:
     submission: Envío de lista de términos
-    distilled: Distilled concepts
+    distilled: Conceptos distilados
     feedback_breakdown: >
-      Terms are evaluated using the following categories. The average is
-      then reported as your performance.
-    list_for_class: List for class on
-    feedback_info_label: Information
+      Los terminos se evaluan utilizando las siguientes categorias. El promedio se
+      informa como desempeno.
+    list_for_class: Lista para la clase en
+    feedback_info_label: Informacion
     credit:
-      zero: no points
-      one: 1 point
+      zero: sin puntos
+      one: un punto
       other: '%{count} points'
     review: 'Review: %{task}'
     enter: 'Enter terms: %{task}'
     play: 'Play Bingo: %{task}'
-    demo_term1: The group dynamics
-    demo_def1: How members of a group work together
-    demo_term2: Cooperation
-    demo_def2: Two or more entitites applying their skills towards achieving a common goal
-    demo_term3: Group Dynamics
-    demo_def3: The nature of how group members interact with one another
-    demo_term4: Group
+    demo_term1: La dinamica de grupo
+    demo_def1: Como trabajan juntos los miembros de un grupo 
+    demo_term2: Cooperacion
+    demo_def2: Dos o mas entidades que aplican sus habilidades para lograr un objetivo comun
+    demo_term3: Dinamica de grupo
+    demo_def3: La naturaleza de como los miembros del grupo interactuan entre si
+    demo_term4: Grupo
     demo_def4: ''
-    demo_term5: Group Process
-    demo_def5: The methods and techniques a group follows
-    demo_term6: Team
-    demo_def6: A bunch of people working together
-    demo_review_topic: Simulations and Gaming
+    demo_term5: Proceso de grupo
+    demo_def5: Los metodos y tecnicas que sigue un grupo
+    demo_term6: Equipo
+    demo_def6: Un grupo de personas trabajando juntas
+    demo_review_topic: Simulaciones y juegos
     demo_review_description: >
       Lara, M., Myers, R., Frick, T. W., Aslan, S., & Michaelidou, T.
       (2010). A Design Case : Creating an Enhanced Version of the
       Diffusion Simulation Game. International Journal of Designs for
       Learning, 1(1), 301–310.
-    demo_bingo_topic: Gamification and Education
+    demo_bingo_topic: Gamificacion y educacion
     demo_bingo_description: >
       Dichev, C., & Dicheva, D. (2017). Gamifying education: what is
       known, what is believed and what remains uncertain: a critical
       review. International Journal of Educational Technology in Higher
       Education (Vol. 14). International Journal of Educational
       Technology in Higher Education.
-    demo_topic: What is collaboration?
+    demo_topic: Que es la colaboracion?
     demo_description: >
       Johnson, R. T., & Johnson, D. W. (1994). An overview of
       cooperative learning. In J. Thousand, A. Villa, & A. Nevin (Eds.),
       Creativity and collaborative learning (pp. 1–21). Baltimore:
       Brookes Press.
-    demo_success: Your response would have been successfully saved. The demonstration is finished.
-    demo_colab_success: Collaboration would have been successfully requested. The demonstration is finished.
-    update_success: Your list was successfully saved.
-    not_ready_for_review: This list is not yet ready for review.
-    no_longer_available: This list is no longer available for editing.
+    demo_success: Tu respuesta se habria guardado correctamente. La demostracion ha terminado.
+    demo_colab_success: La colaboracion se habria solicitado con exito. La demostracion ha terminado.
+    update_success: Tu lista se guardo con exito.
+    not_ready_for_review: Esta lista aun no esta lista para su revision.
+    no_longer_available: Esta lista ya no esta disponible para editar.
     list_closed: >
-      This list has already closed and can no longer be edited.
-    concepts_for_game: All identified viable concepts
+      Esta lista ya se cerro y ya no se puede editar.
+    concepts_for_game: Todos los conceptos viables identificados
     ind_sum_msg: You identified the following terms, resulting in %{con_count} unique concepts
-    term: Term
-    terms: Terms
+    term: Termino
+    terms: Terminos
     grp_sum_msg: >
-      You and your group, %{grp_name}, identified the following terms, resulting 
-      in %{con_count} unique concepts
+      Tu y tu grupo, %{grp_name}, indentificaron lo siguientes terminos que resultan 
+      en %{con_count} conceptos unicos.
     list_stats:
-      title: Candidate list stats
-      def: Clue
+      title: Estadisticas de la lista de candidatos
+      def: Pista
     edit:
-      title: Complete the term list
+      title: Completa la lista de terminos
       instructions: >
         Please read up on the topic above, being sure to go through the
         assigned readings, as well as to find your own materials. Make a
         list of what you believe to be the most important and/or salient
         terms and enter them, along with clues to help others identify the
         terms you're describing.
-      behalf: on behalf of 
-      waiting: Still awaiting a response to your group help request
-      req_rec: Your teammates in {{grp_name}} want to collaborate
+      behalf: a nombre de
+      waiting: Aun esperando una respuesta a su solicitud de ayada grupal
+      req_rec: Tus companeros en {{grp_name}} quieren colaborar.
       req_help: Invite your teammates in {{grp_name}} to help?
       confirm_accept: Are you sure? Did you save your changes? This cannot be undone.
       confirm_decline: Are you sure? Did you save your changes?
-      accept: Accept
-      decline: Decline
-      dup: Possible Duplicate
-      term: Term
-      def: Clue
+      accept: Acceptar
+      decline: Declinar
+      dup: Duplicado
+      term: Trimeste
+      def: Pista
     show:
-      title: Terms list for review
+      title: Lista de terminos para revision
