--- a/config/locales/home.es.yml
+++ b/config/locales/home.es.yml
@@ -191,9 +191,9 @@ en:
     terms_list: Envío de lista de términos
     course_confirm: >
     
-      You've been added to {{course_list_text}}, but sometimes instructors make
-      mistakes, so please do confirm that you are actually enrolled in
-      {{proper_course_list}} listed below
+      Se le agrego al {{course_list_text}}, pero a veces los instructores cometen
+      errores, asi que confirme que realmente esta inscrito en 
+      {{proper_course_list}} que se enumera a continuacion.
     courses_interval: (1){a course};(2-inf){ {{count}} courses}
     courses_proper_interval: (1){the course};(2-inf){the {{count}} courses}
     task_interval: (0){You do not currently have any tasks due. Check back later or contact your instructor.};(1){You've got one task at the moment.};(2-inf){You've got {{count}} tasks today.}
