--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -194,6 +194,9 @@ en:
       You've been added to {{course_list_text}}, but sometimes instructors make
       mistakes, so please do confirm that you are actually enrolled in
       {{proper_course_list}} listed below
-    courses_interval: (1){a course};(2-inf){ {{count}} courses}
-    courses_proper_interval: (1){the course};(2-inf){the {{count}} courses}
-    task_interval: (0){You do not currently have any tasks due. Check back later or contact your instructor.};(1){You've got one task at the moment.};(2-inf){You've got {{count}} tasks today.}
+    courses_interval: (1)[a course];(2-inf)[ {{count}} courses]
+    courses_proper_interval: (1)[the course];(2-inf)[the {{count}} courses]
+    test_zero: zilch
+    test_one: one
+    test_many: many
+    task_interval: (0)[You do not currently have any tasks due. Check back later or contact your instructor.];(1)[You've got one task at the moment.];(2-inf)[You've got {{count}} tasks today.]
