--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -200,3 +200,9 @@ en:
     test_one: one
     test_many: many
     task_interval: (0)[You do not currently have any tasks due. Check back later or contact your instructor.];(1)[You've got one task at the moment.];(2-inf)[You've got {{count}} tasks today.]
+    enroll_title: Enrollment confirmation
+    self_enroll_question: >
+      Would you like to join the {{course_name}} ({{course_number}})
+      course?
+    self_enroll: Enroll me!
+    self_enroll_cancel: Cancel
