--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -209,12 +209,14 @@ en:
       Please see the instructor for {{course_name}} ({{course_number}})
       as they previously declined your enrollment request and they must
       confirm your enrollment themselves.
+    self_enroll_already_requested_body: >
+      You have already requested enrollment in {{course_name}}
+      ({{course_number}}).  Now you must simply wait for an instructor to
+      accept the enrollment.
     self_enroll_already_enrolled_body: >
       You are already enrolled in {{course_name}} ({{course_number}}).
-      Now you must simply wait for an instructor to accept the
-      enrollment.
     self_enroll_instructor_body: >
       You are already an instructor (or assistant) in {{course_name}} ({{course_number}})
       and you cannot enroll in your own course.
     self_enroll: Enroll me!
-    self_enroll_cancel: Cancel
+    self_enroll_cancel: Cancel and Return Home
