--- a/config/locales/graphing.en.yml
+++ b/config/locales/graphing.en.yml
@@ -7,6 +7,9 @@ en:
     projects_list: Select a project
     group_list: Select a group
     individual_list: Select an individual
+    chart_for_group: Group chart for
+    chart_for_individual: Individual chart for
+    chart_for_project: for project 
     none: None Selected
     date: Date
     contribution_lvl: Contribution Level
