--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -5,6 +5,7 @@ en:
     bingo_performance: Bingo! Performance
     experience_performance: Experience Participation Level
     assessment_performance: Assessment Participation Level
+    reset_btn: Clear
     confirmations:
       confirmed: "Your email address has been successfully confirmed."
       send_instructions: >
@@ -59,8 +60,11 @@ en:
       hint: "%{min} characters minimum"
       forgot_title: Forgot your password?
       forgot_submit: Send me reset password instructions
+      reset_tab: Password Reset
     registrations:
       signup: Sign up
+      signup_tab: Sign up
+      signup_btn: Sign up!
       my_courses: My Courses
       my_courses_count:
         zero: You've not yet been involved in a CoLab course.
@@ -106,13 +110,17 @@ en:
       new_address_lbl: "New address:"
       new_address_prompt: What is the new address?
       optional_demo: >
-        Supplying the forllowing information about yourself is optional, but providing it may
+        Supplying the following information about yourself is optional, but providing it may
         help us to provide a smoother experience for you.
       destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
       signed_up: "Welcome! You have signed up successfully."
+      signup_failed: >
+        We're sorry, but we were unable to create your account. Please contact support
+        for assistance.
       signed_up_but_inactive: >
-        You have signed up successfully. However, we could not sign you in because your
-        account is not yet activated.
+        You have signed up successfully and your account is reserved. However, we could
+        not sign you in because your account is not yet activated.  Please check your
+        email and click the link there to verify and activate your new account.
       signed_up_but_locked: >
         You have signed up successfully. However, we could not sign you in because your
         account is locked.
@@ -132,7 +140,7 @@ en:
       email_destroyed: That email address was completely removed from our records.
       set_primary: Your primary email address has been set.
     sessions:
-      signed_in: "Signed in successfully."
+      signed_in: "Welcome! You've signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
       login: Log in
