--- a/config/locales/courses.en.yml
+++ b/config/locales/courses.en.yml
@@ -1,5 +1,13 @@
 en:
   courses:
+  dialog_title: Create a copy
+  btn_tooltip_title: Create a copy based on this course
+  aria_label_btn: Make a copy
+  size_btn: large
+  date_picker_label: New course start date?
+  cancel_btn: Cancel
+  
+
     index:
       title: List of Courses
       submit_copy: Copy this Course
