--- a/config/locales/courses.en.yml
+++ b/config/locales/courses.en.yml
@@ -2,7 +2,7 @@ en:
   courses:
     dialog_title: Create a copy
     btn_tooltip_title: Create a copy based on this course
-    copby_btn_aria: Make a copy
+    copy_btn_aria: Make a copy
     size_btn: large
     date_picker_label: New course start date?
     copy_cancel_btn: Cancel
