refactoring and rubrics

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -161,6 +161,7 @@ en:
   course: Course
   school: School
   schools_edit: Schools
+  rubrics_edit: Rubrics
   consent_forms_edit: Consent Forms
   courses_edit: Courses
   reporting: Reporting Center
