Good progress on assignments

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -58,6 +58,7 @@ en:
   expired: Expired
   bingo_game: Bingo! Game
   experience: Group Experience
+  assignment: Assignment
   other_info: Other information
   start_dow: Start DOW
   end_dow: End DOW
