--- a/config/locales/rubric.en.yml
+++ b/config/locales/rubric.en.yml
@@ -11,6 +11,8 @@ en:
       creator: Created by
     new:
       title: New Rubric
+      criteria: First Criteria
+      criteria_l1: Bare minimum
     create_success: Rubric was created successfully!
     destroy_success: Rubric was destroyed successfully!
     update_success: Rubric was updated successfully!
