--- a/config/locales/rubric.en.yml
+++ b/config/locales/rubric.en.yml
@@ -11,7 +11,7 @@ en:
       creator: Created by
     new:
       title: New Rubric
-      criteria: First Criteria
+      criteria: New Criteria
       criteria_l1: Bare minimum
     create_success: Rubric was created successfully!
     destroy_success: Rubric was destroyed successfully!
