rubric delete and copy

--- a/config/locales/rubric.en.yml
+++ b/config/locales/rubric.en.yml
@@ -20,6 +20,9 @@ en:
     name: Name
     description: Description
     version: Version
+    rubric:
+      copy: Copy rubric
+      delete: Remove this rubric
     criteria:
       new: New Criteria
       sequence: sequence
