--- a/config/locales/assignment.en.yml
+++ b/config/locales/assignment.en.yml
@@ -15,7 +15,7 @@ en:
       creator: Created by
     new:
       title: New Assignment
-      create_assignment_btn: Create new Assignment
+      create_assignment_btn: Create Assignment
     create_success: Assignment was created successfully!
     destroy_success: Assignment was destroyed successfully!
     update_success: Assignment was updated successfully!
