--- a/config/locales/assignment.en.yml
+++ b/config/locales/assignment.en.yml
@@ -8,6 +8,7 @@ en:
       assignment_submissions_pnl: Submissions
       update_assignment_btn: Save Assignment
       group_option: Make groups available?
+      select_rubric: Which rubric will be applied?
     show:
       title: Assignment Details
       edit_string: Edit assignment details
